# rubydex

.github/workflows/: ci.yml  cibuildgem.yaml  indexing_top_gems.yml  memleak.yml
docs/: ruby-behaviors.md
ext/rubydex/: definition.c  graph.c  signature.c  signature.h
lib/: rubydex.rb
lib/rubydex/: version.rb
rbi/: rubydex.rbi
rust/rubydex-mcp/: Cargo.toml
rust/rubydex-sys/src/: definition_api.rs  graph_api.rs  lib.rs  signature_api.rs
rust/rubydex/src/: dot.rs  lib.rs  main.rs  resolution.rs  resolution_tests.rs
rust/rubydex/src/indexing/: local_graph.rs  ruby_indexer.rs  ruby_indexer_tests.rs
rust/rubydex/src/model/: declaration.rs  definitions.rs  document.rs  graph.rs  graph_indexes.rs  references.rs
rust/rubydex/src/model/graph/: visibility.rs
rust/rubydex/src/operation/: applier.rs
rust/rubydex/src/resolution/: method_visibility.rs
rust/rubydex/src/resolution/method_visibility/: module_function.rs  order.rs
rust/rubydex/src/test_utils/: graph_test.rs
rust/rubydex/tests/: cli.rs
test/: declaration_test.rb  definition_test.rb  graph_test.rb
