[package]
name = "rubydex-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"

[[bin]]
name = "rubydex_mcp"
path = "src/main.rs"

[dependencies]
rubydex = { path = "../rubydex" }
clap = { version = "4.5.16", features = ["derive"] }
rmcp = { version = "1.4", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
url = "2"

[dev-dependencies]
rubydex = { path = "../rubydex", features = ["test_utils"] }
assert_cmd = "2.0"
serde_json = "1"

[lints]
workspace = true
